--- a/index.html
+++ b/index.html
@@ -4,15 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sakura</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Logo/Sakura-logos_black.png">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <div class="background">
+        <header class="header-bar">
+
+        </header>
+        <main class="main-container">
+
+        </main>
+        <footer class="footer-container">
+            <h3 class="footer-title">Impressum</h3>
+            <div class="impressum">
+                <div class="adresse">
+                    <h4>Adresse:</h4>
+                    <p>Vorlagestrasse 1 </p>
+                    <p>1234 Baden</p>
+                    <p>Schweiz</p>
+                </div>
+                <div class="kontakt">
+                    <h4>Kontakt:</h4>
+                    <p>Telefonnummer: +00 00 000 00 00</p>
+                    <p>Telefax: +00 00 000 00 00</p>
+                    <p>E-Mail-Adresse: vorlage@übung.ch</p>
+                </div>
+ 
+                <div class="reminder">
+                    <h4>Wichtig</h4>
+                    <p>Denken Sie daran, dass das kein <br> wirkliches Impressum ist.</p>
+                    <p>Es ist nur eine Vorlage.</p>
+                </div>
+            </div>
+            <!--
+            <h4 class="Website-creator">Webseite von Dominik Kreiselmaier</h4>
+            <div class="SVG-icons">
+                <a href="https://www.linkedin.com/in/dominik-kreiselmaier-06b081234/" class="SVG-icons"> <img src="../Resources/Images/linkedin-brands.svg" alt="LinkedIn Logo"> </a> 
+                <a href="https://www.youtube.com/channel/UCJvNpdrQe6snyq52q435tww" class="SVG-icons"> <img src="../Resources/Images/youtube-brands.svg" alt="Youtube Logo"> </a>
+                <a href="https://github.com/RelxOff" class="SVG-icons"> <img src="../Resources/Images/github-brands.svg" alt="GitHub Logo"> </a>
+            </div>
+            -->
+        </footer>
+    </div>
 </body>
 </html>
