--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
 <body>
     <div class="background">
         <header class="header-bar">
-
+            <header class="header">
+                <div class="logo-help">
+                    <a href="" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo" class="img-logo"></a>
+                    <h1 class="header-title">Sakura</h1>
+                </div>
+            </header>
+            <nav class="nav">
+                <a href="" class="Italien">Italien</a>
+                <a href="" class="Frankreich">Frankreich</a>
+                <a href="" class="Asien">Asien</a>
+                <a href="" class="Spanien">Spanien</a>
+            </nav>
         </header>
         <main class="main-container">
 
