files connected :cool:
you can now hop between the pages

--- a/HTML/Asien.html
+++ b/HTML/Asien.html
@@ -27,10 +27,10 @@
                 </div>
             </header>
             <nav class="nav">
-                <a href="" class="Italien">Italien</a>
-                <a href="" class="Frankreich">Frankreich</a>
-                <a href="" class="Asien">Asien</a>
-                <a href="" class="Spanien">Spanien</a>
+                <a href="Italien.html" class="Italien">Italien</a>
+                <a href="Frankreich.html" class="Frankreich">Frankreich</a>
+                <a href="Asien.html" class="Asien">Asien</a>
+                <a href="Spanien.html" class="Spanien">Spanien</a>
             </nav>
         </header>
         <main class="main-container">
