--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,24 +15,26 @@
     <link rel="shortcut icon" href="Logo/Sakura-logos_black.png">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <div class="background">
         <header class="header-bar">
             <header class="header">
                 <div class="logo-help">
-                    <a href="" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo" class="img-logo"></a>
+                    <a href="" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo"
+                            class="img-logo"></a>
                     <h1 class="header-title">Sakura</h1>
                 </div>
             </header>
             <nav class="nav">
-                <a href="" class="Italien">Italien</a>
-                <a href="" class="Frankreich">Frankreich</a>
-                <a href="" class="Asien">Asien</a>
-                <a href="" class="Spanien">Spanien</a>
+                <a href="HTML/Italien.html" class="Italien">Italien</a>
+                <a href="HTML/Frankreich.html" class="Frankreich">Frankreich</a>
+                <a href="HTML/Asien.html" class="Asien">Asien</a>
+                <a href="HTML/Spanien.html" class="Spanien">Spanien</a>
             </nav>
         </header>
         <main class="main-container">
-            
+
         </main>
         <footer class="footer-container">
             <h3 class="footer-title">Impressum</h3>
@@ -48,7 +51,7 @@
                     <p>Telefax: +00 00 000 00 00</p>
                     <p>E-Mail-Adresse: vorlage@übung.ch</p>
                 </div>
- 
+
                 <div class="reminder">
                     <h4>Wichtig</h4>
                     <p>Denken Sie daran, dass das kein <br> wirkliches Impressum ist.</p>
@@ -66,4 +69,5 @@
         </footer>
     </div>
 </body>
+
 </html>
