--- a/HTML/Italien.html
+++ b/HTML/Italien.html
@@ -12,8 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Logo/Sakura-logos_black.png">
+    <link rel="shortcut icon" href="/Logo/Sakura-logos_black.png">
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/hover-effect.css">
 </head>
 
 <body>
@@ -27,10 +28,10 @@
                 </div>
             </header>
             <nav class="nav">
-                <a href="Italien.html" class="Italien">Italien</a>
-                <a href="Frankreich.html" class="Frankreich">Frankreich</a>
-                <a href="Asien.html" class="Asien">Asien</a>
-                <a href="Spanien.html" class="Spanien">Spanien</a>
+                <a href="Italien.html" class="Italien hvr-grow">Italien</a>
+                <a href="Frankreich.html" class="Frankreich hvr-grow">Frankreich</a>
+                <a href="Asien.html" class="Asien hvr-grow">Asien</a>
+                <a href="Spanien.html" class="Spanien hvr-grow">Spanien</a>
             </nav>
         </header>
         <main class="main-container">
