:+1: fade on the buttons
the buttons now got a fade effect

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 </div>
             </header>
             <nav class="nav">
-                <a href="HTML/Italien.html" class="Italien hvr-grow">Italien</a>
-                <a href="HTML/Frankreich.html" class="Frankreich hvr-grow">Frankreich</a>
-                <a href="HTML/Asien.html" class="Asien hvr-grow">Asien</a>
-                <a href="HTML/Spanien.html" class="Spanien hvr-grow">Spanien</a>
+                <a href="HTML/Italien.html" class="Italien hvr-fade">Italien</a>
+                <a href="HTML/Frankreich.html" class="Frankreich hvr-fade">Frankreich</a>
+                <a href="HTML/Asien.html" class="Asien hvr-fade">Asien</a>
+                <a href="HTML/Spanien.html" class="Spanien hvr-fade">Spanien</a>
             </nav>
         </header>
         <main class="main-container">
