--- a/HTML/Italien.html
+++ b/HTML/Italien.html
@@ -28,10 +28,10 @@
                 </div>
             </header>
             <nav class="nav">
-                <a href="Italien.html" class="Italien hvr-grow">Italien</a>
-                <a href="Frankreich.html" class="Frankreich hvr-grow">Frankreich</a>
-                <a href="Asien.html" class="Asien hvr-grow">Asien</a>
-                <a href="Spanien.html" class="Spanien hvr-grow">Spanien</a>
+                <a href="Italien.html" class="Italien hvr-fade">Italien </a>
+                <a href="Frankreich.html" class="Frankreich hvr-fade">Frankreich</a>
+                <a href="Asien.html" class="Asien hvr-fade">Asien</a>
+                <a href="Spanien.html" class="Spanien hvr-fade">Spanien</a>
             </nav>
         </header>
         <main class="main-container">
