--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="Logo/Sakura-logos_black.png">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/hover-effect.css">
+    <link rel="stylesheet" href="CSS/media-queries.css">
 </head>
 
 <body>
