:+1: sanqro nice one
sanqro helped my for this one thanks

--- a/HTML/Asien.html
+++ b/HTML/Asien.html
@@ -23,7 +23,7 @@
         <header class="header-bar">
             <header class="header">
                 <div class="logo-help">
-                    <a href="" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo"
+                    <a href="../index.html" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo"
                             class="img-logo"></a>
                     <h1 class="header-title">Sakura</h1>
                 </div>
