github pages fix :smile:
links for github pages fixed

--- a/HTML/Spanien.html
+++ b/HTML/Spanien.html
@@ -12,10 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/Logo/Sakura-logos_black.png">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/hover-effect.css">
-    <link rel="stylesheet" href="/CSS/media-queries.css">
+    <link rel="shortcut icon" href="../Logo/Sakura-logos_black.png">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/hover-effect.css">
+    <link rel="stylesheet" href="../CSS/media-queries.css">
 </head>
 
 <body>
