--- a/HTML/Italien.html
+++ b/HTML/Italien.html
@@ -12,10 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/Logo/Sakura-logos_black.png">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/hover-effect.css">
-    <link rel="stylesheet" href="/CSS/media-queries.css">
+    <link rel="shortcut icon" href="../Logo/Sakura-logos_black.png">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/hover-effect.css">
+    <link rel="stylesheet" href="../CSS/media-queries.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <header class="header-bar">
             <header class="header">
                 <div class="logo-help">
-                    <a href="../index.html" class="logo-link"><img src="/Logo/Sakura-logos_black.png" alt="Webi Logo"
+                    <a href="../index.html" class="logo-link"><img src="../Logo/Sakura-logos_black.png" alt="Webi Logo"
                             class="img-logo"></a>
                     <h1 class="header-title">Sakura</h1>
                 </div>
