Asien Text added
Asien Text added

--- a/HTML/Asien.html
+++ b/HTML/Asien.html
@@ -36,23 +36,19 @@
             </nav>
         </header>
         <main class="main-container">
-            <p>
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-                Asien
-            </p>
+          <div class="Maintext">
+              <h1>Asiatische Essenskultur</h1>
+              <p>Im Asiatischen Raum wird sehr farbenfroh gekocht. Diese Kultur geht auf mehrere Generationen zurück, die ebenfalls so gekocht haben. Rais und Sojabohnen werden häufig in diesen Gerichten benötigt. Ausserdem benutzt man im Asiatischen Raum häufig Stäbchen als Besteck.
+                  Einige berühmtere Gerichte sind zum Beispiel das sehr scharfe Thai-Curry, die Frühlingsrollen oder auch eine japanische Misosuppe. In der Asiatischen Essenskulur gibt es eine sehr grosse Vielfalt, da diese sich über den ganzen Kontinent ausbreitet.
+                  </p>
+              <h2>Japan</h2>
+              <p>Wenn man an japanisches Essen denkt kommt einem sehr bald Sushi in den Sinn, welche aus rohem Fisch, Reis und Algen gemacht wird. Sushi gehört in Japan allerdings eher zu der gehobenen Küche. In Japan verwendet man häufig Reis, Fisch, Tofu, Fleisch, Nudeln und frisches Gemüse. Die meisten Gerichte sind fettarm gehalten.</p>
+              <h2>Thailand</h2>
+              <p>Die Thailändische Küche ist ein Mix aus Japanisch und Chinesisch. Dabei wird in Thailand sehr auf das Scharfe geachtet. Wobei die Currypaste jedes Gericht nach Thailändisch riechen lässt. Um die Gerichte nicht nur scharf zu machen kommt häufig Kokosmilch zum Einsatz um die Schärfe ein bisschen zu bremsen.</p>
+              <h2>China</h2>
+              <p>In China kommt meist Hühnerfleisch, Schweinefleisch, Entenfleisch und Tofu in die Gerichte. Der Reis ist dabei nicht wegzulassen. Um den typischen Chinesischen Geschmack und Duft zu erlangen wird meist Zitronengras, Ingwer, Sojasauce und Koriander beigefügt.</p>
+
+          </div>
         </main>
         <footer class="footer-container">
             <h3 class="footer-title">Impressum</h3>
@@ -79,7 +75,7 @@
             <!--
             <h4 class="Website-creator">Webseite von Dominik Kreiselmaier</h4>
             <div class="SVG-icons">
-                <a href="https://www.linkedin.com/in/dominik-kreiselmaier-06b081234/" class="SVG-icons"> <img src="../Resources/Images/linkedin-brands.svg" alt="LinkedIn Logo"> </a> 
+                <a href="https://www.linkedin.com/in/dominik-kreiselmaier-06b081234/" class="SVG-icons"> <img src="../Resources/Images/linkedin-brands.svg" alt="LinkedIn Logo"> </a>
                 <a href="https://www.youtube.com/channel/UCJvNpdrQe6snyq52q435tww" class="SVG-icons"> <img src="../Resources/Images/youtube-brands.svg" alt="Youtube Logo"> </a>
                 <a href="https://github.com/RelxOff" class="SVG-icons"> <img src="../Resources/Images/github-brands.svg" alt="GitHub Logo"> </a>
             </div>
