--- a/HTML/Frankreich.html
+++ b/HTML/Frankreich.html
@@ -36,24 +36,16 @@
             </nav>
         </header>
         <main class="main-container">
-            <p>
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-                Frankreich
-            </p>
-
+          <h1>Frankreich</h1>
+            <p>Die französische Küche ist seit der frühen Neuzeit die einflussreichste Landesküche Europas, sie ist auch unter dem Namen Haute Cuisine bekannt. Über die Jahre hat sie sich weltweit etabliert und ist heute in der Kochkunst kaum weg zu denken.</p>
+            <h2>Qualitäten</h2>
+            <p>Die französische Küche ist sowohl für ihre vielfallt, sowohl aber auch für ihre Qualität bekannt. Man findet in allen möglichen Bereichen ein gutes französisches Gericht, Fleisch, Fisch, Gebäck, Teigwaren, Dessert, Salate und was es nicht sonst so alles gibt. Die Qualität spielt aber bestimmt eine genau so grosse Rolle wie die Vielfallt. Besonders auffallend sind der grossartige Geschmack und die Konsistenz der einzelnen Gerichte, sie sind häufig der Perfektion nahe oder haben diese bereits erreicht.</p>
+            <h2>Typischste französische Gebäcke</h2>
+            <p>Aber was wäre eine gute Küche ohne ihre einzigartigen und ikonischen Gerichte und davon hat die französische Küche sehr viele. Das wohl typischste französische Gebäck ist wahrscheinlich das Baguette, ein langes Brot, welches man mit kaum einem anderen Brot vergleichen kann. Aber auch das Croissant ist ein weltweit besonders beliebtes Gebäck, so beliebt das man es in so ziemlich jeder Bäckerei auffinden kann, oder auch die sehr leckeren, aber auch teuren Macarons. Die französische Küche hat logischerweise nicht nur Gebäck, sondern auch andere beliebte Gerichte, wie zum Beispiel das Ratatouille, Flammkuchen, Coq au Vin, Boeuf Bourguignon und viele mehr.</p>
+            <h2>Getränke</h2>
+            <p>Getränke spielen in der französischen Kultur ebenfalls eine Rolle. Wein ist besonders beliebt und hat eine lange Historie der Zubereitung.</p>
+            <h2>Salatsauce</h2>
+            <p>Und zu guter Letzt, was man nicht vergessen sollte, ist natürlich die Französische Salatsauce, welche für viele die Lieblingssalatsauce ist und welche in den meisten Restaurants angeboten wird.</p>
         </main>
         <footer class="footer-container">
             <h3 class="footer-title">Impressum</h3>
@@ -80,7 +72,7 @@
             <!--
             <h4 class="Website-creator">Webseite von Dominik Kreiselmaier</h4>
             <div class="SVG-icons">
-                <a href="https://www.linkedin.com/in/dominik-kreiselmaier-06b081234/" class="SVG-icons"> <img src="../Resources/Images/linkedin-brands.svg" alt="LinkedIn Logo"> </a> 
+                <a href="https://www.linkedin.com/in/dominik-kreiselmaier-06b081234/" class="SVG-icons"> <img src="../Resources/Images/linkedin-brands.svg" alt="LinkedIn Logo"> </a>
                 <a href="https://www.youtube.com/channel/UCJvNpdrQe6snyq52q435tww" class="SVG-icons"> <img src="../Resources/Images/youtube-brands.svg" alt="Youtube Logo"> </a>
                 <a href="https://github.com/RelxOff" class="SVG-icons"> <img src="../Resources/Images/github-brands.svg" alt="GitHub Logo"> </a>
             </div>
