--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="CSS/media-queries.css">
 </head>
 
-<body>
+<body class="body">
     <div class="background">
         <header class="header-bar">
             <header class="header">
